# mindstore

./: .env.example  .gitignore  README.md  docker-compose.yml  mindstore-claude-code-prompt.md  ruff.toml
.github/workflows/: codeql.yml  docker-build.yml  lint.yml  security.yml  test.yml
db/: init.sql
embedder/: Dockerfile  pyproject.toml
embedder/embedder/: __init__.py  base.py  local.py
ingestion/: Dockerfile  alembic.ini  requirements.txt
ingestion/alembic/: env.py
ingestion/alembic/versions/: 001_baseline_schema.py
ingestion/ingestion/: auth.py  chunker.py  db.py  main.py  models.py  pipeline.py
ingestion/ingestion/db/: __init__.py  _helpers.py  contacts.py  home.py  search.py  tasks.py  thoughts.py
mcp_server/: Dockerfile  requirements.txt
mcp_server/mcp_server/: db.py  main.py  search.py  tools.py
refiner/: pyproject.toml
refiner/refiner/: __init__.py  anthropic_refiner.py  base.py
tests/integration/: test_api.py  test_mcp_tools.py  test_search.py
tests/unit/: test_chunker.py  test_embedder.py  test_pipeline.py  test_refiner.py
webapp/: 10-generate-htpasswd.sh  25-generate-nginx-config.sh  Dockerfile  contacts.html  home.html  index.html  login.html  nav.js  nginx.conf.template  styles.css  tasks.html  wiki.html
