[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mindstore-embedder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "sentence-transformers>=2.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["embedder*"]
